--- a/PAGE-TEST-SLIDES.qmd
+++ b/PAGE-TEST-SLIDES.qmd
@@ -1,39 +1,166 @@
 ---
-title: "Teste de Page para k amostras relacionadas"
-author: "Vitória Nascimento de Jesus Sesana"
-format: revealjs
+title: "Teste de Page para k-amostras relacionadas"
+author: "Vitória Sesana"
+format: 
+  revealjs:
+    # incremental: true 
+    width: 1280  
+    height: 720  
 editor: visual
 ---
 
+```{r echo=FALSE}
+library(dplyr)
+library(ggplot2)
+
+
+caminho <- "scripts/bases/base_questionario.csv"
+base <- read.csv2(caminho) %>% 
+  mutate(
+        frequencia_ru = factor(frequencia_ru, levels = c(
+      "Nenhuma vez",
+      "Raramente",
+      "Regularmente",
+      "Frequentemente"
+    ))
+  )
+
+n_respostas <- nrow(base)
+
+```
+
 ## Sumário
 
-- Sobre o teste
-- Metodologia do teste
-- Aplicação prática com dados reais
+
+1. Sobre o teste
+2. Metodologia do teste
+3. Aplicação prática com dados reais
 
 
 # Sobre o teste de page
 
 ## História
 
-## Objetivo
+A história do **Teste de Page** tem origem no contexto dos testes não paramétricos desenvolvidos no século XX, e está associada ao psicológo e estatístico americano [Ellis Batten Page]{.underline}, que propôs o teste em 1963^[Page, E. B. (1963). "Ordered hypotheses for multiple treatments: a significance test for linear ranks." Journal of the American Statistical Association, 58(301), 216–230.].
+
+Elliot Page estava interessado em métodos eficientes para analisar dados classificados (rankings), especialmente quando havia uma hipótese de **ordem específica entre tratamentos**.
+
+
+## Page x Friedman
 
 Ao contrário do teste friedman para k-amostras relacionadas, o teste de page considera a ordinalidade dos dados para cada bloco.
 
+Ou seja, ele é uma extensão do teste de Friedman, mas com uma hipótese alternativa ordenada, do tipo:
+
+$$ \text{Tratamento 1} \leq \text{Tratamento 2} \leq \dots \leq \text{Tratamento k}
+$$
+
+> O teste de Page para alternativas ordenadas é ligeiramente mais poderoso que a análise de variância de Friedman por postos.
+
+## Quando usar?
+
+- Dados pareados ou em blocos.
+
+- As medições podem ser ordenadas (ordinais).
+
+- Quer verificar se existe uma tendência de ordenação entre os tratamentos.
+
 # Metodologia
+
+## Dados
+
+| Bloco   | Tratamento 1   | Tratamento 2   | $\cdots$ | Tratamento $k$   |
+|---------|----------------|----------------|----------|------------------|
+| Bloco 1 | $X_{1,1}$       | $X_{1,2}$       | $\cdots$ | $X_{1,k}$         |
+| Bloco 2 | $X_{2,1}$       | $X_{2,2}$       | $\cdots$ | $X_{2,k}$         |
+| Bloco 3 | $X_{3,1}$       | $X_{3,2}$       | $\cdots$ | $X_{3,k}$         |
+| $\vdots$ | $\vdots$       | $\vdots$       | $\ddots$ | $\vdots$         |
+| Bloco $b$ | $X_{b,1}$     | $X_{b,2}$       | $\cdots$ | $X_{b,k}$         |
+
+> Matriz com b blocos (linhas) e k tratamentos (colunas).
+
+## Passo a passo ^[Código doi: 10.1080/01621459.1963.10500843] 
+
+Passo a passo para a aplicação do teste:
+
+1. Obter a matriz de dados (blocos × grupo);
+2. Rankear os dados dentro de cada linha;
+3. Definir pesos conforme a ordem esperada;
+2. Determinar o nível de confiança; 
+4. Calcular a estatística do teste;
+3. Comparar com valor crítico ou usar aproximação normal para obter p-valor.
+
 
 ## Hipóteses
 
-## Passo a passo
+$$
+\begin{cases}
+H_0: \text{Não há tendência de ordenação entre os tratamentos} \\
+H_1: \text{Existe uma tendência de ordenação específica entre os tratamentos}
+\end{cases}
+$$
 
-## Estatística
+Se você suspeita de uma tendência crescente $T_{1} < \dots < T_{k}$, então os pesos são:
+
+$$w = \{1,\dots,k\}$$
+
+E então suas hipóteses serão:
+
+$$
+\begin{cases}
+H_0: \text{Não há tendência de ordenação entre os tratamentos} \\
+H_1: T_{1} < \dots < T_{k}
+\end{cases}
+$$
+
+## Estatística do teste
+
+$$ L = \sum{}_{j=1}^{k}w_{j}R_{j}$$
+
+- $w_{j}$ = peso esperado do tratamento j;
+
+- $R_{j}$ = soma dos ranks do tratamento.^[$R_{j} =  \sum{}_{i=1}^{b}X_{ij}$ com $i = {1,\dots,b}$ e $j = {1,\dots,k}$ ]
+
 
 ## Decisão
 
+Você compara o valor de L com valores críticos em uma tabela de Page (existe para pequenos valores de n e k), ou para maiores valores usa-se a aproximação normal:
+
+$$
+\mu_L = \frac{n k (k+1)}{2}
+$$
+
+$$
+\sigma_L^2 = \frac{n k (k+1)(2k+1)}{12}
+$$
+
+$$
+Z = \frac{L - \mu_L}{\sigma_L}
+$$
+
+
+## Aplicação no R 
+
+No pacote [DescTools](https://cran.r-project.org/web/packages/DescTools/DescTools.pdf), há a seguinte função para executar o teste de page:
+
+```{r, echo=TRUE, eval=FALSE}
+library(DescTools)
+PageTest(dados)
+```
+
+Executa o Teste de Page para alternativas ordenadas usando um algoritmo exato proposto por Stefan Wellek (1989) com dados em blocos não replicáveis
+
+## Função PageTest()
+
+- A alternativa implementada é que o parâmetro de localização será crescente ao longo dos grupos. Se a direção oposta for necessária, a ordem dos grupos deve ser invertida dentro da matriz.
+
+- Os grupos e blocos são obtidos a partir dos índices das colunas e das linhas, respectivamente. 
+
+- Valores NA não são permitidos nos grupos ou blocos; se y contiver NA, os blocos correspondentes serão removidos.
+
+- Para valores pequenos de k (métodos) ou N (objetos de dados), o PageTest calculará os valores-p exatos. Para k, N > 15, Inf, é retornada uma aproximação normal. Apenas um desses valores será retornado.
+
 # Aplicação
-
-## Contexto 
-
 
 ## Sobre os dados
 
@@ -41,24 +168,204 @@ Foi aplicado um questionário para coletar a ordem de preferência de alguns dos
 
 Os pratos escolhidos foram: frango grelhado, peixe desfiado, carne moída, nuggets e cozido misto.
 
+O objetivo é verificar se as preferências dos estudantes seguem a seguinte ordem:
+
+$$ \text{Carne moída} <  \text{Cozido misto} <  \text{Frango grelhado} \\
+\quad\;\;\; < \text{Peixe desfiado} < \text{Nuggets}$$
+
+## Questionário
+
+1. Você se considera vegano/vegetariano?
+   + Sim/Não
+2. Quantas vezes por seman, em média, você frequenta o RU?
+   + Nenhuma vez por semana;
+   + Raramente (1 vez por semana);
+   + Regularmente (2 a 5 vezes por semana);
+   + Frequentemente (6 a 10 vezes).
+3. Ranqueamento das opções de prato principal.
+
+## Ranqueamento 
+
+```{r, echo=FALSE, out.width='50%', fig.align='center'}
+knitr::include_graphics("imagens/questionario.png")
+```
+
+
 ## Hipóteses
 
+\begin{cases}
+H_0: \text{Não há tendência de ordenação entre os tratamentos} \\
+H_1: \text{Carne moída} <  \text{Cozido misto} <  \text{Frango grelhado} \\
+\quad\;\;\; < \text{Peixe desfiado} < \text{Nuggets}
+\end{cases}
+
+Com os pesos sendo:
+
+$$w = \{1,2,3,4,5\}$$
+
+E o nível de signficância adotado: 
+
+$$\alpha = 5\%$$
 
 
 ## Análise exploratória dos dados
 
+- Quantidade total de estudantes: `r n_respostas`
 
+- Quantidade de vegetarianos/veganos:
 
-## Aplicação do no R teste
+| Vegetariano/Vegano | Quantidade |
+|---------|---------------------------|
+| Sim     | 0  |
+| Não     | 30 |
+| Total     | 30 |
 
-No pacote *DescTools*, há uma função para executar o teste de page
+## Análise exploratória dos dados
 
-```{r, eval=FALSE}
-library(DescTools)
-?PageTest()
+- Gráfico de barras das frequências semanais de idas ao RU:
+
+```{r, echo=FALSE, out.width='75%', out.height='50%', fig.align='center'}
+ggplot(base, aes(x = frequencia_ru)) +
+  geom_bar(fill = "#2B4B8F", width = 0.75) +                
+  geom_text(stat = "count", aes(label = ..count..), vjust = -0.5) +  
+  labs(title = "",
+       x = "",
+       y = "Frequência das respostas") +
+  scale_y_continuous(
+    limits = c(0, max(table(base$frequencia_ru))),
+    breaks = seq(0, max(table(base$frequencia_ru)), by = 2) 
+    ) +
+  theme_minimal() + 
+  theme( 
+    panel.grid.major.x = element_blank(),
+    panel.grid.minor.y = element_line(colour = "#C4C4C4"),
+    panel.grid.major.y = element_line(colour = "#696969")
+  )
+ 
 ```
 
-## Resultados
+## Análise exploratória dos dados
+
+- Percentual dos ranqueamentos por opção de prato principal:
+
+```{r, echo=FALSE, out.width='90%', out.height='100%', fig.align='center'}
+# Selecionar colunas dos alimentos
+dados <- base %>%
+  select(
+    carne_moida,
+    cozido_misto,
+    frango_grelhado,
+    peixe_desfiado,
+    nuggets
+  )
+
+# Função para calcular a porcentagem de cada classe
+calcular_porcentagem <- function(coluna) {
+  prop.table(table(coluna)) * 100
+}
+
+# Aplicando a função a cada coluna
+porcentagens_categorias <- lapply(dados, calcular_porcentagem)
+
+# Transformando os resultados em um data.frame para o ggplot
+porcentagens_long <- data.frame(
+  Classe = character(),
+  Alimento = character(),
+  Porcentagem = numeric()
+)
+
+# Organizando os dados
+for (alimento in names(porcentagens_categorias)) {
+  porcentagens <- porcentagens_categorias[[alimento]]
+  for (classe in names(porcentagens)) {
+    porcentagens_long <- rbind(porcentagens_long, data.frame(
+      Classe = factor(classe, levels = c("1", "2", "3", "4", "5")),  # Ordem correta: 1 na base, 5 no topo
+      Alimento = alimento,
+      Porcentagem = porcentagens[classe]
+    ))
+  }
+}
+
+porcentagens_long <- 
+  porcentagens_long %>% 
+  mutate(
+    Alimento = case_when(
+      Alimento == "carne_moida" ~ "Carne moída",
+      Alimento == "cozido_misto" ~ "Cozido misto",
+      Alimento == "frango_grelhado" ~ "Frango grelhado",
+      Alimento == "peixe_desfiado" ~ "Peixe desfiado",
+      Alimento == "nuggets" ~ "Nuggets",
+      
+    )
+  )
+# Plotando o gráfico
+ggplot(porcentagens_long, aes(x = factor(
+  Alimento, 
+        levels = c("Carne moída",
+"Cozido misto",
+"Frango grelhado",
+"Peixe desfiado",
+"Nuggets")
+      
+), y = Porcentagem, fill = Classe)) +
+  geom_bar(stat = "identity", position = "stack") +
+  labs(x = "", y = "Porcentagem (%)", fill = "Preferência") +
+  scale_fill_manual(
+    values = c("1" = "#F44336", "2" = "#FF9800", "3" = "#FFEB3B", "4" = "#4CAF50", "5" = "#2196F3"),
+    labels = c("Preferência 1", "Preferência 2", "Preferência 3", "Preferência 4", "Preferência 5")
+  ) +
+  theme_minimal() +
+  theme(
+    axis.text.x = element_text(angle = 45, hjust = 1), panel.grid.major.x = element_blank(), panel.grid.major.y = element_blank(), panel.grid.minor.y = element_blank()
+    ) +
+  ggtitle("")
+```
+
+## Aplicação do teste de page
+
+```{r, echo=TRUE}
+rankings <- 
+  base %>% 
+  select(
+    carne_moida, 
+    cozido_misto,
+    frango_grelhado, 
+    peixe_desfiado,
+    nuggets,
+  ) %>% 
+  as.matrix()
+
+head(rankings)
+```
+## Aplicação do teste de page
+
+```{r, echo=TRUE}
+library(DescTools)
+PageTest(rankings)
+```
+
+## Cenário 2
+
+Apenas indivíduos que vão frequentemente ao RU (6 a 10 vezes por semana).
+
+
+```{r, echo=TRUE}
+rankings_2 <- 
+  base %>% 
+  filter(
+    frequencia_ru %in% c("Frequentemente")
+    ) %>% 
+  select(
+    carne_moida, 
+    cozido_misto,
+    frango_grelhado, 
+    peixe_desfiado,
+    nuggets,
+  ) %>% 
+  as.matrix()
+
+PageTest(rankings_2)
+```
 
 
 ## Referências
@@ -68,5 +375,10 @@ Page, E. (1963): Ordered hypotheses for multiple treatments: A significance test
 Siegel, S. & Castellan, N. J. Jr. (1988): Nonparametric statistics for the behavioral sciences. Boston, MA: McGraw-Hill.
 
 Wellek, S. (1989): Computing exact p-values in Page's nonparametric test against trend. Biometrie und Informatik in Medizin und Biologie 20, 163-170
+
+
+[https://cran.r-project.org/web/packages/DescTools/DescTools.pdf](https://cran.r-project.org/web/packages/DescTools/DescTools.pdf)
+
+
 
 # Agradeço pela atenção!
